--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,26 +2,38 @@
 	<html>
 		<head>
 			<title>{{ page.title }}</title>
-			<!-- link to main stylesheet -->
-			<link rel="stylesheet" type="text/css" href="/css/main.css">
+			<meta charset='utf-8'>
+ -    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+ -    <meta name="description" content="ajhstn.github.io : ">
+			<link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 		</head>
 		<body>
+			<!-- HEADER -->
+ -    <div id="header_wrap" class="outer">
+ -        <header class="inner">
+ -          <a id="forkme_banner" href="https://github.com/ajhstn">View on GitHub</a>
+ -
+ -          <h1 id="project_title">ajhstn.github.io</h1>
+ -          <h2 id="project_tagline"></h2>
+ -
+ -        </header>
+ -    </div>
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
-			<div class="container">
+			<div id="main_content_wrap" class="outer">
+ -      <section id="main_content" class="inner">
 			
 			{{ content }}
 			
-			</div><!-- /.container -->
-			<footer>
-	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-				</ul>
-			</footer>
+			</section></div><!-- /.container -->
+			<!-- FOOTER  -->
+ -    <div id="footer_wrap" class="outer">
+ -      <footer class="inner">
+ -        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+ -      </footer>
 		</body>
 	</html>
