--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
  -          <a id="forkme_banner" href="https://github.com/ajhstn">View on GitHub</a>
  -
  -          <h1 id="project_title">ajhstn.github.io</h1>
- -          <h2 id="project_tagline"></h2>
+ -          <h2 id="project_tagline">tagline</h2>
  -
  -        </header>
  -    </div>
@@ -34,6 +34,6 @@
  -    <div id="footer_wrap" class="outer">
  -      <footer class="inner">
  -        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
- -      </footer>
+ -      </footer></div>
 		</body>
 	</html>
