--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,21 +3,21 @@
 		<head>
 			<title>{{ page.title }}</title>
 			<meta charset='utf-8'>
- -    <meta http-equiv="X-UA-Compatible" content="chrome=1">
- -    <meta name="description" content="ajhstn.github.io : ">
+     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+     <meta name="description" content="ajhstn.github.io : ">
 			<link rel="stylesheet" type="text/css" media="screen" href="css/stylesheet.css">
 		</head>
 		<body>
 			<!-- HEADER -->
- -    <div id="header_wrap" class="outer">
- -        <header class="inner">
- -          <a id="forkme_banner" href="https://github.com/ajhstn">View on GitHub</a>
- -
- -          <h1 id="project_title">ajhstn.github.io</h1>
- -          <h2 id="project_tagline">tagline</h2>
- -
- -        </header>
- -    </div>
+     <div id="header_wrap" class="outer">
+         <header class="inner">
+           <a id="forkme_banner" href="https://github.com/ajhstn">View on GitHub</a>
+ 
+           <h1 id="project_title">ajhstn.github.io</h1>
+           <h2 id="project_tagline">tagline</h2>
+ 
+         </header>
+     </div>
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
@@ -25,15 +25,15 @@
 	    		</ul>
 			</nav>
 			<div id="main_content_wrap" class="outer">
- -      <section id="main_content" class="inner">
+       <section id="main_content" class="inner">
 			
 			{{ content }}
 			
 			</section></div><!-- /.container -->
 			<!-- FOOTER  -->
- -    <div id="footer_wrap" class="outer">
- -      <footer class="inner">
- -        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
- -      </footer></div>
+     <div id="footer_wrap" class="outer">
+       <footer class="inner">
+         <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+       </footer></div>
 		</body>
 	</html>
