--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,12 @@
 
           <h1 id="project_title">andrew&#39;s code host</h1>
           <h2 id="project_tagline">tagline here</h2>
-
+		  <nav>
+	    		<ul>
+	        		<li><a href="/">Home</a></li>
+	        		<li><a href="/blog">Blog</a></li>
+	    		</ul>
+			</nav>
         </header>
     </div>
 
