--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="andrew&#39;s code host : tagline here">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="andrew&#39;s code host : tagline here">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <title>andrew&#39;s code host</title>
   </head>
@@ -20,15 +22,15 @@
 
           <h1 id="project_title">andrew&#39;s code host</h1>
           <h2 id="project_tagline">tagline here</h2>
-		  <nav>
+		  
+        </header>
+    </div>
+	<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 	        		<li><a href="/blog">Blog</a></li>
 	    		</ul>
 			</nav>
-        </header>
-    </div>
-
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
