--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 		</div>
 		<div id="navbar" class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-			<li class="active"><a href="#">Home</a></li>
+			<li class="active"><a href="/">Home</a></li>
 			<li><a href="/blog">blog</a></li>
 			</ul>
 		</div><!--/.nav-collapse -->
