--- a/css/main.css
+++ b/css/main.css
@@ -267,7 +267,7 @@ Full-Width Styles
 .inner {
   position: relative;
   max-width: 640px;
-  padding: 20px 10px;
+  padding: 20px;
   margin: 0 auto;
 }
 
