--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,19 @@
     <title>Bootstrap 101 Template</title>
   </head>
   <body>
-	  <nav></nav>
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+		<div class="navbar-header">
+		<a class="navbar-brand" href="#">ajhstn</a>
+		</div>
+		<ul class="nav navbar-nav">
+		<li class="active"><a href="/">Home</a></li>
+		<li><a href="/blog">blog</a></li>
+		<li><a href="#">Page 2</a></li> 
+		<li><a href="#">Page 3</a></li> 
+		</ul>
+		</div>
+	</nav>
     {{content}}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
