--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,14 +13,21 @@
 	<nav class="navbar navbar-default">
 		<div class="container-fluid">
 		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span> 
+			</button>
 		<a class="navbar-brand" href="#">ajhstn</a>
 		</div>
+		<div class="collapse navbar-collapse" id="myNavbar">
 		<ul class="nav navbar-nav">
 		<li class="active"><a href="/">Home</a></li>
 		<li><a href="/blog">blog</a></li>
 		<li><a href="#">Page 2</a></li> 
 		<li><a href="#">Page 3</a></li> 
 		</ul>
+		</div>
 		</div>
 	</nav>
     {{content}}
