--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/main.css" />
-    <title>Bootstrap 101 Template</title>
+    <title>{{ page.title }}</title>
   </head>
   <body>
 	<nav class="navbar navbar-default">
@@ -21,16 +21,18 @@
 		<a class="navbar-brand" href="#">ajhstn</a>
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
-		<ul class="nav navbar-nav">
-		<li class="active"><a href="/">Home</a></li>
-		<li><a href="/blog">blog</a></li>
-		<li><a href="#">Page 2</a></li> 
-		<li><a href="#">Page 3</a></li> 
-		</ul>
+			<ul class="nav navbar-nav">
+				<li class="active"><a href="/">Home</a></li>
+				<li><a href="/blog">blog</a></li>
+			</ul>
 		</div>
 		</div>
 	</nav>
+	<div class="container">
+
     {{content}}
+	
+	</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
