--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 		</div>
 		<div class="collapse navbar-collapse" id="myNavbar">
 			<ul class="nav navbar-nav">
-				<li class="active"><a href="/">.\</a></li>
+				<li class="active"><a href="/">.\></a></li>
 				<li><a href="/archive">archive</a></li>
 			</ul>
 		</div>
