--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -4,6 +4,10 @@ layout: default
 <h1>{{ page.title }}</h1>
 <p>{{ page.date | date_to_string }}</p>
 
-<div>
+<div class="content">
   {{ content }}
+</div>
+
+<div class="comments">
+  {% include comments.html %}
 </div>
