--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 </article>
 
 <div>
-    {% if page.comments %}
-      {% include comments.html %}
-    {% endif %}
+  {% unless page.nocomments %}
+    {% include comments.html %}
+  {% endunless %}
 </div>
